--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply font-bold;
+  }
+}
+
 /* 
 :root {
   --foreground-rgb: 0, 0, 0;
